--- a/style.scss
+++ b/style.scss
@@ -336,7 +336,7 @@
         100%{transform:translateY(-700px)}
     }
     .index2{
-    
+    width:100%;
         &__text{
             position:absolute;
             left:600px;
